--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-router-hash-link": "^2.4.3",
+    "react-youtube": "^10.1.0",
     "recharts": "^3.1.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.13"
